JVM参数: 修复Spark，完善描述